--- a/Styles/style.css
+++ b/Styles/style.css
@@ -303,6 +303,84 @@
 }
 /* Deals & Discounts section style end*/
 
+
+
+
+
+/* footer section style */
+footer {
+  width: 100%;
+  height: 609px;
+
+  /* background-color: black; */
+  background: rgba(19, 19, 24, 0.05);
+}
+.footer-container-1 {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.footer-description p {
+  width: 769px;
+  color: #5a5a5d;
+  text-align: center;
+
+  font-size: 16px;
+
+  font-weight: 400;
+  line-height: 26px;
+  background-color: red;
+}
+.footer-container-2 {
+  width: 100%;
+  padding: 70px 30px 20px;
+  margin: auto;
+}
+.social-icons {
+  display: flex;
+  justify-content: center;
+}
+.social-icons a {
+  text-decoration: none;
+  padding: 10px;
+  background-color: white;
+  margin: 10px;
+  border-radius: 50%;
+}
+.social-icons a i {
+  font-size: 2em;
+
+  opacity: 0.9;
+}
+/* hover effects on social media icons */
+.social-icons a:hover {
+  transition: 0.5s;
+}
+.social-icons a:hover i {
+  color: rgb(117, 76, 76);
+  transition: 0.5s;
+}
+.footer-bottom {
+  text-align: center;
+}
+.footer-title {
+  color: #131318;
+  font-size: 16px;
+  font-weight: 300;
+}
+/* horizontal-line style*/
+.horizontal-line {
+  width: 872px;
+  height: 1px;
+ 
+  background: rgba(19, 19, 24, 0.10);
+  margin-left: 284px;
+  
+  margin-top: 48px;
+  margin-bottom: 48px;
+}
+
+/* footer section style end */
 /*  Choose Us Section styles end */
 
 /* 
