--- a/Styles/style.css
+++ b/Styles/style.css
@@ -294,7 +294,7 @@
 .discount-banner-1 {
   width: 579px;
   height: 389px;
-  
+
   border-radius: 16px;
   border: 2px solid #fff;
   background-image: url(../Images/Group\ 39.png);
@@ -303,42 +303,56 @@
 }
 /* Deals & Discounts section style end*/
 
-
-
-
-
 /* footer section style */
 footer {
-  width: 100%;
-  height: 609px;
-
-  /* background-color: black; */
+  width: 1440px;
+  height: 502px;
   background: rgba(19, 19, 24, 0.05);
+  margin: 0 auto;
 }
 .footer-container-1 {
   display: flex;
   justify-content: center;
   align-items: center;
+  padding-top: 110px;
+}
+.footer-container-1 img {
+  width: 40px;
+  height: 46px;
+}
+.footer-container-1 h2 {
+  color: #131318;
+  font-size: 32px;
+  font-weight: 800;
+}
+.travel-color {
+  color: #ff5400;
+  font-size: 32px;
+  font-weight: 800;
+ 
 }
 .footer-description p {
   width: 769px;
   color: #5a5a5d;
   text-align: center;
-
+  margin-left: 350px;
   font-size: 16px;
-
+  margin-top: 15px;
   font-weight: 400;
   line-height: 26px;
-  background-color: red;
+ 
 }
+
 .footer-container-2 {
-  width: 100%;
-  padding: 70px 30px 20px;
-  margin: auto;
+  width: 174px;
+ 
+  margin: 0 auto;
 }
 .social-icons {
   display: flex;
   justify-content: center;
+  align-items: center;
+  margin-top: 33px;
 }
 .social-icons a {
   text-decoration: none;
@@ -372,10 +386,10 @@ footer {
 .horizontal-line {
   width: 872px;
   height: 1px;
- 
-  background: rgba(19, 19, 24, 0.10);
+
+  background: rgba(19, 19, 24, 0.1);
   margin-left: 284px;
-  
+
   margin-top: 48px;
   margin-bottom: 48px;
 }
