--- a/Styles/style.css
+++ b/Styles/style.css
@@ -37,6 +37,7 @@
   text-decoration: none;
 }
 /* header styles end */
+
 .main {
   width: 1200px;
   margin: 40px auto;
@@ -48,18 +49,23 @@
 /*  */
 .container1 {
   width: 1170px;
-  height: 500px;
+  height: 600px;
+  background-repeat: no-repeat;
   background-image: linear-gradient(180deg, #252525 0%, rgba(7, 2, 17, 0) 100%),
-    url(../Images/Group\13\\(1\)\\(1\).png);
-  margin: 0px auto;
+    url(../Images/banner-1.png);
+  margin: 50px auto;
   align-items: center;
+ 
 }
+
 .c1-text-sec {
   width: 600px;
   margin: 0px auto;
   padding-top: 100px;
   text-align: center;
   align-items: center;
+}
+.c1-input-sec > .b-text {
 }
 .c1-title {
   color: #fff;
@@ -71,6 +77,57 @@
   color: white;
   padding-bottom: 20px;
 }
+.explor-sec {
+  width: 90%;
+  margin: 0 auto;
+  border-radius: 8px;
+  background: rgba(255, 255, 255, 0.3);
+ 
+}
+.explor-sec form{
+  display: inline-flex;
+  padding: 15px;
+  align-items: flex-start;
+  gap: 12px;
+  align-items: center;
+  justify-content: center;
+  
+}
+.t-select, .t-select-2{
+  border-radius: 8px;
+  background-color: white;
+  color: black;
+  padding: 10px;
+  border: 0px;
+  width: 200px;
+}
+.t-input{
+  border-radius: 8px;
+  background-color: white;
+  color: black;
+  padding: 10px;
+  border: 0px;
+  width: 200px;
+}
+.banner-button{
+  border-radius: 8px;
+  background-color: white;
+  color: black;
+  padding: 10px;
+  border: 0px;
+  width: 200px;
+}
+
+/* }
+.c1-input-sec{
+  display: flex;
+  
+  gap: 20px;
+  margin: 0 200px;
+}
+.b-text{
+  
+} */
 
 /* Tours Section styles*/
 .banner-3 {
@@ -303,6 +360,167 @@
 }
 /* Deals & Discounts section style end*/
 
+/* banner-7 style */
+.banner-7 {
+  display: flex;
+  gap: 35px;
+  justify-content: center;
+  align-items: center;
+}
+.banner-7-description {
+}
+.banner-7-container {
+}
+.banner-7-container h2 {
+  width: px;
+  color: #131318;
+
+  font-size: 40px;
+
+  font-weight: 800;
+  line-height: 60px;
+}
+.banner-7-container p {
+  width: 532px;
+  color: #5a5a5d;
+  margin-top: 24px;
+  font-size: 16px;
+
+  font-weight: 400;
+  line-height: 26px; /* 162.5% */
+}
+.banner-7-video video {
+  width: 610px;
+  height: 424px;
+  border-radius: 16px;
+  background: linear-gradient(
+    180deg,
+    #131318 -31.96%,
+    rgba(19, 19, 24, 0) 100%
+  );
+}
+
+/*  Newsletter Section style */
+.newsletter-section {
+  display: flex;
+  gap: 24px;
+  justify-content: center;
+  align-items: center;
+  margin-top: 100px;
+  margin-bottom: 100px;
+}
+.subscribe-section {
+  width: 474px;
+  height: 422px;
+  border-radius: 16px;
+  border: 1px solid #ff5400;
+  padding-left: 35px;
+}
+.subscribe-section h2 {
+  color: #131318;
+  font-size: 24px;
+  font-weight: 800;
+  margin-top: 30px;
+  margin-bottom: 10px;
+}
+.subscribe-section p {
+  width: 350px;
+  color: #5a5a5d;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 26px;
+}
+
+/* contact */
+/* 
+input[class="text-1"],
+select {
+  width: 393px;
+  height: 52px;
+  border-radius: 8px;
+  background: rgba(19, 19, 24, 0.05);
+  margin-top: 20px;
+  margin-bottom: ;
+  border: none;
+  box-sizing: border-box;
+  padding-left: 10px;
+} */
+.text-1,
+select {
+  width: 393px;
+  height: 52px;
+  border-radius: 8px;
+  background: rgba(19, 19, 24, 0.05);
+  margin-top: 20px;
+
+  border: none;
+  box-sizing: border-box;
+  padding-left: 10px;
+}
+
+/* 
+input[class="email-1"],
+select {
+  width: 393px;
+  height: 52px;
+  border-radius: 8px;
+  background: rgba(19, 19, 24, 0.05);
+  margin-top: 20px;
+  margin-bottom: 16px;
+  border: none;
+  box-sizing: border-box;
+  padding-left: 10px;
+} */
+.email-1,
+select {
+  width: 393px;
+  height: 52px;
+  border-radius: 8px;
+  background: rgba(19, 19, 24, 0.05);
+  margin-top: 20px;
+  margin-bottom: 16px;
+  border: none;
+  box-sizing: border-box;
+  padding-left: 10px;
+}
+.btn {
+  width: 393px;
+  height: 52px;
+
+  border: none;
+  box-sizing: border-box;
+  cursor: pointer;
+  border-radius: 8px;
+  background: #ff5400;
+}
+.subscribe-section .btn {
+  color: #fff;
+  text-align: center;
+  font-size: 20px;
+  font-weight: 800;
+  margin-top: 10px;
+}
+.newsletter-banner {
+  position: relative;
+}
+.rotate {
+  transform: rotate(-18.63deg);
+  width: 300px;
+  height: 120px;
+  border-radius: 16px;
+
+  background: #ff5400;
+  text-align: center;
+  align-items: center;
+  padding-top: 20px;
+
+  position: absolute;
+  bottom: 45px;
+  right: 8px;
+}
+
+/*  Newsletter Section style end */
+
 /* footer section style */
 footer {
   width: 1440px;
@@ -329,7 +547,6 @@ footer {
   color: #ff5400;
   font-size: 32px;
   font-weight: 800;
- 
 }
 .footer-description p {
   width: 769px;
@@ -340,12 +557,11 @@ footer {
   margin-top: 15px;
   font-weight: 400;
   line-height: 26px;
- 
 }
 
 .footer-container-2 {
   width: 174px;
- 
+
   margin: 0 auto;
 }
 .social-icons {
@@ -382,48 +598,17 @@ footer {
   font-size: 16px;
   font-weight: 300;
 }
-/* horizontal-line style*/
-.horizontal-line {
-  width: 872px;
-  height: 1px;
 
-  background: rgba(19, 19, 24, 0.1);
-  margin-left: 284px;
 
-  margin-top: 48px;
-  margin-bottom: 48px;
+
+/* re */
+@media screen and (max-width: 600px) {
+  .explor-sec form{
+    flex-direction: column;
+    margin-bottom: 200px;
+  }
+  .t-select{
+    width: 100%;
+  }
+
 }
-
-/* footer section style end */
-/*  Choose Us Section styles end */
-
-/* 
-body {
-  margin: 0;
-  font-family: Arial, sans-serif;
-}
-
-.image-container {
-  position: relative;
-}
-
-.image-container img {
-  width: 100%;
-  height: auto;
-  display: block;
-}
-
-.text-overlay {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  text-align: center;
-  color: white;
-  font-size: 24px;
-  font-weight: bold;
-  background: rgba(0, 0, 0, 0.7);
-  padding: 20px;
-  border-radius: 10px;
-}
- */
