--- a/Styles/style.css
+++ b/Styles/style.css
@@ -55,7 +55,6 @@
     url(../Images/banner-1.png);
   margin: 50px auto;
   align-items: center;
- 
 }
 
 .c1-text-sec {
@@ -81,55 +80,48 @@
   width: 90%;
   margin: 0 auto;
   border-radius: 8px;
-  background: rgba(255, 255, 255, 0.3);
- 
+  background: rgba(240, 238, 238, 0.3);
 }
-.explor-sec form{
+.explor-sec form {
   display: inline-flex;
   padding: 15px;
   align-items: flex-start;
   gap: 12px;
   align-items: center;
   justify-content: center;
-  
 }
-.t-select, .t-select-2{
+.t-select,
+.t-select-2 {
+  width: 174px;
   border-radius: 8px;
   background-color: white;
   color: black;
   padding: 10px;
   border: 0px;
-  width: 200px;
+  
 }
-.t-input{
+.t-input {
   border-radius: 8px;
   background-color: white;
   color: black;
-  padding: 10px;
+  padding: 16.8px;
   border: 0px;
-  width: 200px;
+  width: 174px;
 }
-.banner-button{
+.banner-button {
+  width: 174px;
+  height: 52px;
+  color: #fff;
+  text-align: center;
+  font-size: 16px;
+  font-weight: 700;
   border-radius: 8px;
-  background-color: white;
-  color: black;
+  background: #ff5400;
+  border: none;
+}
+.banner-button i{
   padding: 10px;
-  border: 0px;
-  width: 200px;
 }
-
-/* }
-.c1-input-sec{
-  display: flex;
-  
-  gap: 20px;
-  margin: 0 200px;
-}
-.b-text{
-  
-} */
-
-/* Tours Section styles*/
 .banner-3 {
   width: 1170px;
   margin: 50px auto;
@@ -431,20 +423,6 @@
   line-height: 26px;
 }
 
-/* contact */
-/* 
-input[class="text-1"],
-select {
-  width: 393px;
-  height: 52px;
-  border-radius: 8px;
-  background: rgba(19, 19, 24, 0.05);
-  margin-top: 20px;
-  margin-bottom: ;
-  border: none;
-  box-sizing: border-box;
-  padding-left: 10px;
-} */
 .text-1,
 select {
   width: 393px;
@@ -458,19 +436,6 @@ select {
   padding-left: 10px;
 }
 
-/* 
-input[class="email-1"],
-select {
-  width: 393px;
-  height: 52px;
-  border-radius: 8px;
-  background: rgba(19, 19, 24, 0.05);
-  margin-top: 20px;
-  margin-bottom: 16px;
-  border: none;
-  box-sizing: border-box;
-  padding-left: 10px;
-} */
 .email-1,
 select {
   width: 393px;
@@ -523,7 +488,7 @@ select {
 
 /* footer section style */
 footer {
-  width: 1440px;
+  width: 100%;
   height: 502px;
   background: rgba(19, 19, 24, 0.05);
   margin: 0 auto;
@@ -573,7 +538,7 @@ footer {
 .social-icons a {
   text-decoration: none;
   padding: 10px;
-  background-color: white;
+
   margin: 10px;
   border-radius: 50%;
 }
@@ -598,17 +563,22 @@ footer {
   font-size: 16px;
   font-weight: 300;
 }
-
-
+.horizontal-line {
+  width: 872px;
+  height: 1px;
+  background: rgba(19, 19, 24, 0.1);
+  margin-top: 50px;
+  margin-bottom: 50px;
+  margin-left: 284px;
+}
 
 /* re */
 @media screen and (max-width: 600px) {
-  .explor-sec form{
+  .explor-sec form {
     flex-direction: column;
     margin-bottom: 200px;
   }
-  .t-select{
+  .t-select {
     width: 100%;
   }
-
 }
