--- a/Styles/style.css
+++ b/Styles/style.css
@@ -39,7 +39,7 @@
 /* header styles end */
 
 .main {
-  width: 1200px;
+  width: 1440px;
   margin: 40px auto;
   /* border: 1px solid black; */
   justify-content: center;
@@ -49,11 +49,11 @@
 /*  */
 .container1 {
   width: 1170px;
-  height: 600px;
+  height: 500px;
   background-repeat: no-repeat;
   background-image: linear-gradient(180deg, #252525 0%, rgba(7, 2, 17, 0) 100%),
     url(../Images/banner-1.png);
-  margin: 50px auto;
+  margin: 40px auto;
   align-items: center;
 }
 
@@ -171,6 +171,8 @@
   color: #fff;
   font-size: 20px;
   font-weight: 800;
+  border: none;
+  cursor: pointer;
 }
 .banner-3-img-sec {
   margin-left: 25px;
